# ccmgr

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: pages.yml  release.yml
src/ccmgr/: __main__.py  cli.py  config.py  config_store.py  discovery.py  launcher.py  models.py  path_codec.py  project_filter.py  session_cache.py  session_index.py  terminal_holder.py  tmux_ctl.py
src/ccmgr/ui/: app.py  modals.py  projects_pane.py  running_pane.py  sessions_pane.py  statusbar.py
tests/: conftest.py  test_config.py  test_config_store.py  test_discovery.py  test_launcher.py  test_path_codec.py  test_project_filter.py  test_session_cache.py  test_session_index.py  test_terminal_holder.py  test_tmux_ctl.py
web/: DESIGNS.md  package-lock.json  react-router.config.ts  vite.config.ts
web/app/: app.css
web/app/components/: ConfigSection.tsx  FeaturesSection.tsx  FooterSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  InstallRunSection.tsx  KeybindingsSection.tsx  NavBar.tsx  RoadmapSection.tsx
web/app/routes/: home.tsx
