[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccmgr"
dynamic = ["version"]
description = "Terminal UI to navigate, resume, and start Claude Code sessions across all your projects"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Saugat Regmi", email = "regmisaugat1602@gmail.com"},
]
keywords = ["claude", "claude-code", "tmux", "tui", "session-manager", "terminal"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Terminals",
  "Topic :: Utilities",
]
dependencies = [
  "urwid>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0",
]

[project.scripts]
ccmgr = "ccmgr.cli:main"

[project.urls]
Homepage = "https://github.com/regmi-saugat/ccmgr"
Repository = "https://github.com/regmi-saugat/ccmgr"
Issues = "https://github.com/regmi-saugat/ccmgr/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "ccmgr.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
